# graphql-router-example

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  local.rs  parser.rs  plugins.rs  remote.rs
tests/: router.rs  supergraph.graphql  supergraph.yaml  user.graphql
